--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -37,7 +37,7 @@ jobs:
           plugin_anilist_medias: anime, manga
           plugin_anilist_sections: favorites
           plugin_anilist_shuffle: yes
-          plugin_anilist_user: .user.login
+          plugin_anilist_user: MangoAPI
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
